<resources>
    <string name="app_name">Keliling Museum</string>
    <string name="desc1">Merupakan Museum terbesar di Sumatra Utara yang berbagai peninggalan sejarah budaya bangsa, hasil seni dan kerajinan dari berbagai suku di Sumatra Utara. </string>
    <string name="desc1Title">Museum Negeri Sumatera Utara</string>
    <string name="sub3">Pilih museum yang anda sukai dari tombol\n <b>"PILIH MUSEUM"</b>
    </string>
    <string name="sub2">Anda akan merasakan nikmatnya berkeliling Museum terkenal secara virtual.</string>
    <string name="pilihmuseumsuka"><br>PILIH MUSEUM YANG INGIN \n</br><br>ANDA KUNJUNGI</br></string>
    <string name="pilihanrequest">Tidak menemukan Museum favorit anda?</string>
    <string name="request">Request Museum</string>
    <string name="alamat">Alamat : Jl. HM. Joni No.51, Teladan Bar., Kec. Medan Kota, Kota Medan, Sumatera Utara 20217\nJam Buka :\nSenin <b><i>Tutup</i></b>\nSelasa-Kamis<b>08:00-16:00</b>\nJumat-Minggu<b>08:00-15.30</b></string>
    <string name="kopi">Suka aplikasi ini? traktir saya kopi\n(Rp15.000,-)</string>
    <string name="p_laklak">Pustaha Laklak</string>
    <string name="makara">Makara</string>
    <string name="P_LaklakDesc">Merupakan lukisan minyak di atas kayu poplar yang dibuat oleh Leonardo da Vinci pada abad ke-16. Lukisan ini sering dianggap sebagai salah satu lukisan paling terkenal di dunia dan hanya sedikit karya seni lain yang menjadi pusat perhatian, studi, mitologi, dan parodi. Lukisan ini dimiliki oleh pemerintah Prancis dan dipamerkan di Musée du Louvre di Paris.</string>
    <string name="MakaraDesc">Sebuah karakter The Sympson yang membuat parodi sebagai Mona Lisa. Lukisan ini Digital Painting dan termasuk sebagai parodi Mona Lisa yang cukup terkenal.</string>
    <string name="title">Keliling Museum</string>
    <string name="sub1">Selamat Datang di</string>
    <string name="sejarahtitle1">Sejarah Museum</string>
    <string name="sejarah1">Museum Negeri Provinsi Sumatera Utara diresmikan tanggal 19 April 1982 oleh Menteri Pendidikan dan Kebudayaan, Dr.Daoed Yoesoef, namun peletakan koleksi pertama dilakukan oleh Presiden Republik Indonesia pertama, Ir. Soekarno, tahun 1954 berupa makara. Oleh karena itu museum ini terkenal dengan nama Gedung Arca.
    Bangunan museum berdiri di atas lahan seluas 10.468 meter persegi, terdiri dari bangunan induk dua lantai yang difungsikan sebagai ruang pameran tetap, ruang pameran temporer, ruang audio-visual/ceramah, ruang Kepala Museum, tata usaha, ruang seksi bimbingan, perpustakaan, ruang mikro film, ruang komputer, serta gudang.
    Secara arsitektur, bentuk bangunan induk museum ini menggambarkan rumah tradisional daerah Sumatera Utara. Pada bagian atap depan dipenuhi dengan ornamen dari etnis Melayu, Batak Toba, Simalungun, Karo, Mandailing, Pakpak, dan NiasBerdasarkan koleksi yang dimiliki, Museum Negeri Provinsi Sumatera Utara dikategorikan sebagai museum umum.
        Sebagian besar koleksinya berasal dari daerah Sumatera Utara berupa benda-benda peninggalan sejarah budaya mulai dari masa prasejarah, klasik pengaruh Hindu-Buddha, Islam, hingga sejarah perjuangan masa kini.Sebagian lainnya berasal dari beberapa daerah lain di Indonesia dan dari negara lain seperti Thailand.
        Hingga tahun 2005 Museum Negeri Provinsi Sumatera Utara menyimpan kurang lebih 6.799 koleksi.</string>
    <string name="title_koleksi1">Koleksi Museum</string>
    <string name="kol_desc1"><b>MASA PRASEJARAH</b>\nPada ruang pertama ini ditampilkan sejarah geologi mulai terbentuknya alam semesta, pergeseran benua, dan Pulau Sumatera. Sejarah alam mengenai migrasi manusia, sebaran flora dan fauna, juga mengenai kehidupan prasejarah. Koleksi yang ditampilkan meliputi replika hewan khas Sumatera, replika fosil manusia purba, diorama kehidupan prasejarah, serta beragam perkakas prasejarah.</string>
    <string name="kol_desc2"><b>KEBUDAYAAN SUMATERA UTARA KUNO</b>\nMenampilkan jejak dari peradaban awal masyarakat Sumatera Utara, mulai dari masa megalitik tua hingga masa perundagian. Koleksi yang ditampilkan meliputi temuan budaya megalit seperti peti mati dari batu (sarkofagus), benda-benda religi berupa patung batu dan kayu, tongkat perdukunan, wadah obat dari gading, serta koleksi naskah Batak Kuno yang ditulis pada kulit kayu yang disebut Pustaha Laklak.</string>
    <string name="kol_desc3"><b>MASA KERAJAAN HINDU-BUDDHA</b>\nPeradaban Hindu dan Buddha menyebar ke wilayah Indonesia seiring dengan berkembangnya perniagaan Asia sekitar abad ke-2 Masehi. Ruang ini menampilkan koleksi peninggalan agama Hindu-Buddha yang ditemukan di daerah Sumatera Utara, diantaranya temuan arkeologi dari situs Percandian Padang Lawas dan situs Kota Cina. Benda koleksi meliputi arca batu, perunggu, pecahan keramik, dan mata uang kuno, juga sebuah replika candi induk dari Candi Bahal I.</string>
    <string name="kol_desc4"><b>MASA KERAJAAN ISLAM</b>\nRuang Islam menampilkan berbagai artefak peninggalan masa Islam seperti replika berbagai batu nisan dari makam Islam yang ditemukan di daerah Barus, Sumatera Utara. Serta nisan peninggalan Islam yang bercorak khas Batak, beberapa Al Qur\'an, dan naskah Islam tua yang ditulis dengan tangan. Serta sebuah replika Masjid Azizi di Medan (note: tepatnya di Tanjung Pura, Langkat; negeri kelahiran Amir Hamzah).</string>
    <string name="kol_desc5"><b>KOLONIALISME DI SUMATERA UTARA</b>\nSebelum Pemerintah Hindia Belanda masuk dan memerintah di wilayah Sumatera, para pengusaha dari Eropa khususnya Jerman telah datang dan membuka perkebunan di Sumatera. Koleksi masa kolonial membawa kita kembali pada masa-masa tersebut, ketika kemajuan usaha perkebunan telah melahirkan Medan sebagai kota multikultur yang kaya, unik, dan menarik. Koleksi yang ditampilkan meliputi komoditas perdagangan kolonial, alat-alat, dan mata uang perkebunan, foto-foto bersejarah yang langka, model figur kolonial, serta replika dari kehidupan kota Medan tempo dulu.</string>
    <string name="kol_desc6"><b>PERJUANGAN RAKYAT SUMATERA UTARA</b>\nSeperti halnya daerah lain di Indonesia, di Sumatera Utara telah tumbuh benih-benih perlawanan terhadap penjajah jauh sebelum kemerdekaan. Ruang perjuangan menceritakan sejarah perjuangan masyarakat Sumatera Utara sejak sebelum 1908 sampai masa revolusi fisik 1945-1949, juga ditampilkan sejarah perjuangan pers di Sumatera Utara. Benda koleksi meliputi senjata tradisional dan modern, obat-obatan tradisional, peralatan komunikasi yang digunakan melawan penjajah. Juga ditampilkan lukisan kepahlawanan dan poster propaganda masa perang.</string>
    <string name="kol_desc7"><b>GUBERNUR &amp; PAHLAWAN SUMATERA UTARA</b>\nRuang ini menampilkan para pahlawan nasional yang berasal dari provinsi Sumatera Utara, juga para mantan gubernur yang telah berjasa membangun dan memajukan provinsi Sumatera Utara. Koleksi berupa foto-foto serta lukisan dari para pahlawan dan mantan gubernur Sumatera Utara.</string>
</resources>