<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KoleksiMuseum">

    <LinearLayout
        android:id="@+id/toppanel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/Primer"
        android:elevation="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/backtodesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="7dp"
            android:background="@android:color/transparent"
            android:padding="20dp"
            android:src="@drawable/backbutton"
            android:tint="@color/Black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/segoeuib"
            android:text="Menu Museum"
            android:textAlignment="center"
            android:textSize="21sp" />

        <ImageButton
            android:id="@+id/homeicon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_homeicon"
            android:tint="@color/Black" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toppanel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/seguibl"
                android:gravity="center"
                android:text="@string/title_koleksi1"
                android:textColor="@color/Sekunder"
                android:textSize="25sp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="37dp"
                android:text="@string/kol_desc1"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="37dp"
                android:text="@string/kol_desc2"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="37dp"
                android:text="@string/kol_desc3"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="37dp"
                android:text="@string/kol_desc4"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="37dp"
                android:text="@string/kol_desc5"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="37dp"
                android:text="@string/kol_desc6"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginEnd="37dp"
                android:text="@string/kol_desc7"
                android:layout_marginBottom="20dp"/>
            <Button
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:id="@+id/pilih"
                android:letterSpacing="0"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="67dp"
                android:layout_marginRight="67dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/roundrectangle"
                android:shadowColor="@color/Aksen"
                android:fontFamily="@font/seguibl"
                android:text="Galeri"
                android:textColor="@color/Primer"
                android:textSize="19sp"
                app:backgroundTint="@color/Aksen"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>